# YDBAIM

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  _YDBAIM.m  _ydbaim.manifest.json.in  install.sh  pre-commit
tests/: needs_copyright.sh  run_bash_tests.sh  test.sh
tests/bash-tests/: bash_test_output.ref  ydbaim_test.sh
tests/munit-tests/: OCTOTEST1083.m  _YDBAIMSAN.m  _YDBAIMSPEED.m  _YDBAIMTEST.m
ydbcmake/: FindYOTTADB.cmake
